--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.87"
 tokio = { version = "1", features = ["full"] }
+chrono = { version = "0.4.22", features = ["serde"] }
